--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #f0f0f0;
 }
 
 .App-logo {
@@ -24,9 +27,25 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cardContainer {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  overflow-x: hidden;
+  padding: 10px 0 0 40px;
 }
+
+.paginationContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 40px;
+}
+
+.arrow-left {
+  margin-right: 10px;
+}
+
 
 @keyframes App-logo-spin {
   from {
